@@ -11,9 +11,9 @@ $(function(){
     $('#options').editable({
         value: [2, 3],    
         source: [
-              {value: 1, text: 'Active'},
-              {value: 2, text: 'Blocked'},
-              {value: 3, text: 'Deleted'}
+              {value: 1, text: 'option1'},
+              {value: 2, text: 'option2'},
+              {value: 3, text: 'option3'}
            ]
         }
     });
